k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-order-ingress
  namespace: smart-order
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          # 1. API Traffic goes to the Gateway
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          # 2. Kibana
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
          # 3. Everything else goes to the React Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
